Rollback discriminator value in deployment entity. Update Paths.get to use Path.of instead.